# Capstone1_2019Spring

A/src/ball_detection/src/: ball_detect.cpp  ball_detect_past.cpp  ball_detect_trash.cpp
A/src/data_integrate/: CMakeLists.txt
A/src/data_integrate/launch/: test.launch
A/src/data_integrate/src/: data_integration.cpp  data_integration_trash.cpp  pathgen.cpp
A/src/rgbd_tutorial/: CMakeLists.txt  package.xml
A/src/rgbd_tutorial/src/: rgbd_tutorial.cpp
A/src/webcam/: CMakeLists.txt
A/src/webcam/src/: webcam_node.cpp
B/src/ball_detection/: CMakeLists.txt
B/src/ball_detection/src/: ball_detect.cpp
B/src/core_msgs/: CMakeLists.txt
B/src/core_msgs/msg/: ball_pos.msg  ball_position.msg
B/src/data_integrate/launch/: B.launch
B/src/data_integrate/src/: data_integration.cpp
B/src/webcam/src/: webcam_node.cpp
B/src/xbox_ctrl/src/: xbox_ctrl.cpp  xbox_node.cpp
C/src/ball_detection/: CMakeLists.txt  package.xml
C/src/ball_detection/src/: ball_detect_1.cpp  ball_detect_2.cpp  ball_detect_3.cpp
C/src/data_integrate/: package.xml
C/src/data_integrate/launch/: start_kaibot_with_xbox.launch  start_kaibot_without_xbox.launch
C/src/data_integrate/src/: data_integration.cpp  data_show.cpp
C/src/image_transport_tutorial/src/: my_publisher.cpp
D/: Readme.txt
D/src/: imu_data.bag
D/src/ball_detection/: CMakeLists.txt
D/src/ball_detection/src/: ball_detect1.cpp  ball_detect2.cpp  difference check  modify_ball_count1.cpp  modify_ball_count2.cpp
D/src/core_msgs/: CMakeLists.txt
D/src/imu_tutorial/: CMakeLists.txt  package.xml
D/src/imu_tutorial/src/: imu_tutorial.cpp
D/src/webcam/src/: webcam_node.cpp
E/src/ball_detection/: CMakeLists.txt
E/src/ball_detection/src/: ball_detect.cpp  ball_detect1.cpp  ball_detect_back2.cpp
E/src/core_msgs/: CMakeLists.txt
E/src/core_msgs/msg/: ball_position.msg
E/src/data_integrate/: CMakeLists.txt
E/src/data_integrate/src/: data_integration.cpp  sorting.cpp
F/: ROS 최종보고서.docx
F/src/ball_detection/src/: ball_detect.cpp
F/src/data_integrate/src/: data_integration.cpp
G/src/ball_detection/cfg/: BallDetection.cfg
G/src/ball_detection/src/: ball_detect.cpp
G/src/data_integrate/: CMakeLists.txt
G/src/rplidar_ros/: CMakeLists.txt
G/src/rplidar_ros/src/: node.cpp  (+1 more)
H/src/balltracking/: CMakeLists.txt  main.cpp
H/src/lidar_homework/: CMakeLists.txt  package.xml
H/src/lidar_homework/src/: lidar_homework.cpp
(+19 files in other folders)
